Fixes format of technical dataframes
Also starts to stub out service to pull trading halts from the
NASDAQ/NYSE

--- a/notebooks/technical_prediction/technical_prediction_data.ipynb
+++ b/notebooks/technical_prediction/technical_prediction_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hundred-judge",
+   "id": "junior-questionnaire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "baking-cannon",
+   "id": "subtle-scholarship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "protected-principle",
+   "id": "happy-narrative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "comparative-milwaukee",
+   "id": "arctic-baltimore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "promotional-reply",
+   "id": "reasonable-regulation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "removed-sense",
+   "id": "technical-robert",
    "metadata": {},
    "source": [
     "Build a base data frame from the stock's low, open, close, high and volume for the given time period"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "minute-weather",
+   "id": "smart-receiver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dying-plastic",
+   "id": "economic-riding",
    "metadata": {},
    "source": [
     "Construct a set of data frames that each hold:\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "latin-bedroom",
+   "id": "compliant-latest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "agreed-funeral",
+   "id": "assured-prophet",
    "metadata": {},
    "source": [
     "Go through the calendar and fetch all the historical data on this ticker that we have access to.\n",
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "martial-royalty",
+   "execution_count": 57,
+   "id": "completed-violence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
     "    if jar.pickle_exists(historical_pickle_name):\n",
     "        return jar.read_pickle_dataframe(historical_pickle_name)\n",
     "    # if it doesn't, build it\n",
-    "    historical_data = []\n",
+    "    historical_data = pandas.DataFrame()\n",
     "    today = date.today()\n",
     "    x_days_ago = today + timedelta(days = -1 * days)\n",
     "    current_date = x_days_ago\n",
@@ -179,123 +179,31 @@
     "            data = jar.read_pickle_dataframe(pickle_name)\n",
     "        else:\n",
     "            data = construct_data_frames(ticker, current_date)\n",
-    "            # pickle this day's data to cut down own API requests\n",
-    "            df = pandas.DataFrame(data)\n",
+    "            # pickle this day's data to cut down on API requests\n",
+    "            df = pandas.DataFrame.from_records(data)\n",
     "            jar.write_pickle_dataframe(pickle_name, df)\n",
-    "        historical_data.append(data)\n",
+    "            time.sleep(2) # sleep for 2 seconds so we don't hit the API limit\n",
+    "        historical_data = historical_data.append(data)\n",
     "        current_date = current_date + timedelta(days = 1)\n",
     "    # pickle this historical data\n",
-    "    historical_df = pandas.DataFrame(historical_data)\n",
-    "    jar.write_pickle_dataframe(historical_pickle_name, historical_df)\n",
-    "    return historical_df"
+    "    jar.write_pickle_dataframe(historical_pickle_name, historical_data)\n",
+    "    return historical_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "rolled-samuel",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tim/.pyenv/versions/3.8.7/lib/python3.8/site-packages/pandas/core/internals/construction.py:309: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  values = np.array([convert(v) for v in values])\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = get_historical_data('AAPL')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "third-mortality",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0           1           2        ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0           1           2        ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0           1           2        ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0           1           2        ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0           1           2        ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   0\n",
-       "0               0           1           2        ...\n",
-       "1               0           1           2        ...\n",
-       "2               0           1           2        ...\n",
-       "3               0           1           2        ...\n",
-       "4               0           1           2        ..."
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "advanced-trail",
+   "execution_count": 60,
+   "id": "sensitive-basketball",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_frames_02_24_22 = jar.read_pickle_dataframe(\"{0}-{1}.technical.df.pkl\".format('AAPL', yesterday.strftime(\"%m-%d-%Y\")))"
+    "df = get_historical_data('AAPL')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "choice-evanescence",
+   "execution_count": 61,
+   "id": "owned-james",
    "metadata": {},
    "outputs": [
     {
@@ -338,76 +246,76 @@
        "      <th>0</th>\n",
        "      <td>122.631000</td>\n",
        "      <td>123.000000</td>\n",
-       "      <td>122.815500</td>\n",
+       "      <td>123.282900</td>\n",
        "      <td>123.492000</td>\n",
-       "      <td>69</td>\n",
+       "      <td>58</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.174731</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.276882</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.222603</td>\n",
+       "      <td>0.452055</td>\n",
+       "      <td>0.277397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>122.385738</td>\n",
-       "      <td>122.754000</td>\n",
-       "      <td>122.569869</td>\n",
-       "      <td>123.245016</td>\n",
-       "      <td>83</td>\n",
+       "      <td>123.182840</td>\n",
+       "      <td>123.553500</td>\n",
+       "      <td>123.837673</td>\n",
+       "      <td>124.047714</td>\n",
+       "      <td>43</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.174731</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.276882</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.222603</td>\n",
+       "      <td>0.452055</td>\n",
+       "      <td>0.277397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>122.140967</td>\n",
-       "      <td>122.508492</td>\n",
-       "      <td>122.324729</td>\n",
-       "      <td>122.998526</td>\n",
-       "      <td>91</td>\n",
+       "      <td>123.737162</td>\n",
+       "      <td>124.109491</td>\n",
+       "      <td>124.394943</td>\n",
+       "      <td>124.605929</td>\n",
+       "      <td>89</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.174731</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.276882</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.222603</td>\n",
+       "      <td>0.452055</td>\n",
+       "      <td>0.277397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>121.896685</td>\n",
-       "      <td>122.263475</td>\n",
-       "      <td>122.544681</td>\n",
-       "      <td>122.752529</td>\n",
-       "      <td>36</td>\n",
+       "      <td>124.293980</td>\n",
+       "      <td>124.667983</td>\n",
+       "      <td>124.480981</td>\n",
+       "      <td>125.166655</td>\n",
+       "      <td>5</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.174731</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.276882</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.222603</td>\n",
+       "      <td>0.452055</td>\n",
+       "      <td>0.277397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>122.445220</td>\n",
-       "      <td>122.813661</td>\n",
-       "      <td>123.096132</td>\n",
-       "      <td>123.304915</td>\n",
-       "      <td>97</td>\n",
+       "      <td>124.045392</td>\n",
+       "      <td>124.418647</td>\n",
+       "      <td>124.704810</td>\n",
+       "      <td>124.916322</td>\n",
+       "      <td>19</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.024194</td>\n",
-       "      <td>0.174731</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.276882</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.222603</td>\n",
+       "      <td>0.452055</td>\n",
+       "      <td>0.277397</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -415,33 +323,33 @@
       ],
       "text/plain": [
        "           0           1           2           3   4     5         6   \\\n",
-       "0  122.631000  123.000000  122.815500  123.492000  69  1.68  1.555857   \n",
-       "1  122.385738  122.754000  122.569869  123.245016  83  1.68  1.555857   \n",
-       "2  122.140967  122.508492  122.324729  122.998526  91  1.68  1.555857   \n",
-       "3  121.896685  122.263475  122.544681  122.752529  36  1.68  1.555857   \n",
-       "4  122.445220  122.813661  123.096132  123.304915  97  1.68  1.555857   \n",
+       "0  122.631000  123.000000  123.282900  123.492000  58  1.68  1.555857   \n",
+       "1  123.182840  123.553500  123.837673  124.047714  43  1.68  1.555857   \n",
+       "2  123.737162  124.109491  124.394943  124.605929  89  1.68  1.555857   \n",
+       "3  124.293980  124.667983  124.480981  125.166655   5  1.68  1.555857   \n",
+       "4  124.045392  124.418647  124.704810  124.916322  19  1.68  1.555857   \n",
        "\n",
-       "         7         8         9    10        11  \n",
-       "0  0.024194  0.024194  0.174731  0.5  0.276882  \n",
-       "1  0.024194  0.024194  0.174731  0.5  0.276882  \n",
-       "2  0.024194  0.024194  0.174731  0.5  0.276882  \n",
-       "3  0.024194  0.024194  0.174731  0.5  0.276882  \n",
-       "4  0.024194  0.024194  0.174731  0.5  0.276882  "
+       "         7         8         9         10        11  \n",
+       "0  0.023973  0.023973  0.222603  0.452055  0.277397  \n",
+       "1  0.023973  0.023973  0.222603  0.452055  0.277397  \n",
+       "2  0.023973  0.023973  0.222603  0.452055  0.277397  \n",
+       "3  0.023973  0.023973  0.222603  0.452055  0.277397  \n",
+       "4  0.023973  0.023973  0.222603  0.452055  0.277397  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_frames_02_24_22.head()"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suffering-regulation",
+   "id": "assigned-productivity",
    "metadata": {},
    "outputs": [],
    "source": []
